services and footer updated

--- a/src/home/components/bottom/bottom.component.html
+++ b/src/home/components/bottom/bottom.component.html
@@ -1,42 +1,27 @@
 <div class="bottom">
   <div class="container">
-    <div class="mx-auto" style="width: 300px;">
-      <img class="bottom-logo my-5" src="assets/images/logo.png">
-    </div>
     <div class="row">
-      <div class="col-md-4">
-        <div class="bottom-head">
-          <i class="fa fa-map-marker" aria-hidden="true"></i> Address
-        </div>
-        <div class="bottom-text">
-          Ali Mia Membar Market, Bhuighar Bus-Stand, Bhuighar, Fatullah, Narayanganj-1421
+      <div class="col-auto navbar-brand">
+        <img class="logo-image" src="assets/images/logo_sm.png"> Janani
+      </div>
+      <div class="col">
+        <div class="contact-info">
+          <div class="d-flex justify-content-center">
+            <div class="media">
+              <div class="media-body">
+                Ali Mia Membar Market<br>
+                Bhuighar Bus-Stand, Bhuighar <br>
+                Fatullah, Narayanganj-1421
+              </div>
+            </div>
+            <div class="media">
+              <div class="media-body">
+                Phone: (+88) 01686-763706,  01904-111196<br>
+                Email : <a href="mailto:atikullahfaysal@gmail.com">atikullahfaysal@gmail.com</a> </div>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="col-md-4">
-        <div class="bottom-head">
-          <i class="fa fa-phone" aria-hidden="true"></i> Telephone
-        </div>
-        <div class="bottom-text">
-          01686-763706; 01904-111195;
-          <br> 01904-111196; 01904-111197;
-          <br> 01904-111198; 01904-111199;
-          <br> from 10:00 AM to 11:00 PM
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="bottom-head">
-          Follow us
-        </div>
-        <div class="bottom-text">
-          <a class="server-link" href="https://www.facebook.com/jananitechnology/" target="_blank">
-            <i class="fa fa-facebook" aria-hidden="true"></i>
-          </a>
-
-          <i class="fa fa-twitter" aria-hidden="true"></i>
-          <i class="fa fa-google-plus" aria-hidden="true"></i>
-        </div>
-      </div>
-
     </div>
   </div>
 </div>
