--- a/src/home/containers/index/index.component.html
+++ b/src/home/containers/index/index.component.html
@@ -3,5 +3,6 @@
 <advantages></advantages>
 <plan></plan>
 <parallax></parallax>
+<services></services>
 <!-- <bottom></bottom>
 <footer></footer> -->
