--- a/src/home/components/footer/footer.component.html
+++ b/src/home/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid footer">
-  <h2 class="text-center">Janani Technology Limited</h2>
+  <!-- <h2 class="text-center">Janani Technology Limited</h2> -->
   <div class="copy-right">Developed by ©2018
-    <a href="https://www.unololtd.com" target="_blank">UNOLO Technology Limited</a>. All Rights Reserved </div>
+    <a href="https://www.monerbari.com" target="_blank">Monerbari Technology Limited</a>. All Rights Reserved </div>
 </div>
