--- a/src/home/components/banner/banner.component.html
+++ b/src/home/components/banner/banner.component.html
@@ -7,9 +7,8 @@
       <p>Looking for fast broadband without any line problem? Look no further! We even include Netphone with every plan,
         offering
         great rates and call value.</p>
-      <button class="button button-1 raised" (click)="navigate('/order')">GET CONNECTION NOW
-        <i class="fa fa-chevron-right mx-2"></i>
-      </button>
+      <button class="btn button-2 btn-info rounded-pill" (click)="navigate('/order')">GET CONNECTION NOW
+        <i class="fa fa-chevron-right mx-2"></i></button>
     </div>
   </ng-template>
   <ng-template ngbSlide>
@@ -21,9 +20,11 @@
           plan, offering
           great rates and call value.</p>
       </div>
-      <button class="button button-2 raised" (click)="navigate('/order')">GET CONNECTION NOW
+      <button class="btn button-2 btn-primary rounded-pill" (click)="navigate('/order')">GET CONNECTION NOW
+        <i class="fa fa-chevron-right mx-2"></i></button>
+      <!-- <button class="btn button-2 raised" (click)="navigate('/order')">GET CONNECTION NOW
         <i class="fa fa-chevron-right mx-2"></i>
-      </button>
+      </button> -->
     </div>
   </ng-template>
   <ng-template ngbSlide>
@@ -33,9 +34,8 @@
       <p>Looking for fast broadband without any line problem? Look no further! We even include Netphone with every plan,
         offering
         great rates and call value.</p>
-      <button class="button button-1 raised" (click)="navigate('/order')">GET CONNECTION NOW
-        <i class="fa fa-chevron-right mx-2"></i>
-      </button>
+        <button class="btn button-2 btn-light rounded-pill" (click)="navigate('/order')">GET CONNECTION NOW
+          <i class="fa fa-chevron-right mx-2"></i></button>
     </div>
   </ng-template>
 </ngb-carousel>
