--- a/src/home/components/banner/banner.component.scss
+++ b/src/home/components/banner/banner.component.scss
@@ -6,9 +6,9 @@
 }
 .carousel-caption {
   position: absolute;
-  right: 55%;
+  right: 60%;
   top: 10vh;
-  left: 5%;
+  left: 10%;
   // z-index: 10;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -23,51 +23,46 @@
   & p {
     font-weight: 300;
     font-family: "Raleway", sans-serif;
-    font-size: 20px;
-    line-height: 34px;
+    font-size: 16px;
+    line-height: 25px;
   }
 }
 
 .slide-head {
-  font-size: 32px;
-  line-height: 32px;
+  font-size: 26px;
+  line-height: 30px;
   font-weight: 800;
   transition: none 0s ease 0s;
   transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
   transform-origin: 50% 50% 0px;
-
-  // font-weight: 600;
-  // font-family: "Raleway", sans-serif;
-  // font-size: 30px;
 }
 
-.button {
-  cursor: pointer;
-  height: 64px;
-  //   padding: 15px;
-  font-size: 19px !important;
-  margin-top: 0px !important;
-  padding: 15px 27px !important;
-  border-radius: 3px;
-  font-family: "Raleway", sans-serif;
-  font-weight: 800;
-  line-height: 34px;
-  outline: none;
-  &-1 {
-    color: #444444;
-    background: #fffc00;
-    & i {
-      color: #14a0f8;
-    }
-  }
-  &-2 {
-    color: #444444;
-    background: #14a0f8;
-    & i {
-      color: #fffc00;
-    }
-  }
-}
+// .button {
+//   cursor: pointer;
+//   height: 50px;
+//   font-size: 19px !important;
+//   margin-top: 0px !important;
+//   padding: 5px!important;
+//   border-radius: 25px;
+//   font-family: "Raleway", sans-serif;
+//   font-weight: 800;
+//   line-height: 25px;
+//   outline: none;
+//   &-1 {
+//     color: #eee;
+//     background: #ed2427;
+//     & i {
+//       color: #2d86cf;
+//     }
+//   }
+//   &-2 {
+//     color: #eee;
+//     background: #2d86cf;
+//     & i {
+//       color: #ed2427;
+//     }
+//   }
+// }
 
 @media (max-width: 767px) {
   .carousel-image {
