contact us page updated

--- a/src/home/containers/about/about.component.html
+++ b/src/home/containers/about/about.component.html
@@ -1,4 +1,43 @@
-<div class="about">
+<page-head [name]="'About Us'" [page]="'About us'"></page-head>
+
+<div class="container">
+  <div class="row my-5">
+    <div class="col-md-6">
+      <section-heding [section]="'who'" [name]="'we are'"></section-heding>
+
+      <h4 class="my-4">We are one of the largest Internet Service Provider
+        and the leader in the telecommunications market.</h4>
+      <p>Janani technology limited has started its operation in the year 2015 with the commitment of quality internet
+        service at an affordable price. At the time of Janani technology limited started with broadband service with the
+        state of art technology. In the course of time it’s R & D team has developed and introduced many new
+        technologies to meet the requirement of new millennium. In the last 2 years Janani technology limited has
+        introduced many new ideas and technologies to the internet industry.</p>
+
+      <ul>
+        <li><i class="fa fa-check"></i> High speed broadband internet</li>
+        <li><i class="fa fa-check"></i> FTP Server</li>
+        <li><i class="fa fa-check"></i> Torrent Servers</li>
+        <li><i class="fa fa-check"></i> Live TV Server</li>
+      </ul>
+    </div>
+    <div class="col-md-6">
+      <img class="img-fluid" src="assets/images/muslim_kids.png">
+    </div>
+  </div>
+  <div class="row my-5">
+    <div class="col-12">
+      <section-heding [section]="'why to'" [name]="'choose us'"></section-heding>
+      <p class="text-center mt-5">We are a hands-on data centre,
+        we work hand in hand with you to provide your
+        home / business with appropriate customised solutions</p>
+      <advantages></advantages>
+    </div>
+  </div>
+</div>
+
+
+
+<!-- <div class="about">
   <div class="container">
     <div class="row">
       <div class="col-12 about-title">
@@ -43,4 +82,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
