--- a/src/home/containers/index/index.component.html
+++ b/src/home/containers/index/index.component.html
@@ -1,8 +1,10 @@
 <!-- <navbar></navbar> -->
 <banner></banner>
+<div class="mt-5 pt-5"></div>
+<section-heding [section]="'A RANGE OF'" [name]="'ADVANTAGES'"></section-heding>
 <advantages></advantages>
 <plan></plan>
 <parallax></parallax>
-<services></services>
+<services [head]='false'></services>
 <!-- <bottom></bottom>
 <footer></footer> -->
