--- a/src/home/containers/services/services.component.html
+++ b/src/home/containers/services/services.component.html
@@ -1,3 +1,7 @@
+<ng-container *ngIf="head">
+  <page-head [name]="'Our Service'" [page]="'services'"></page-head>
+</ng-container>
+
 <div class="services">
   <div class="container">
     <section-heding [section]="'OUR'" [name]="'SERVICES'"></section-heding>
