--- a/src/home/containers/contacts/contacts.component.html
+++ b/src/home/containers/contacts/contacts.component.html
@@ -1,16 +1,31 @@
+<page-head [name]="'Contact Us'" [page]="'contacts'"></page-head>
 <div class="contacts">
   <div class="container">
     <div class="row">
-      <div class="col-12 contacts-title">
-        <h2>Contacts </h2>
-        <span>call us 7/24 from 8:00 AM to 2:00 AM</span>
+      <div class="col-md-6">
+        <section-heding [section]="'Contact'" [name]="'us'"></section-heding>
+
+        <div class="my-4">
+          <h4>Location</h4>
+          <p class="pl-5">Ali Mia Membar Market <br>
+            Bhuighar Bus-Stand, Bhuighar <br>
+            Fatullah, Narayanganj-1421</p>
+        </div>
+
+        <div class="my-4">
+          <h4>Phone</h4>
+          <p class="pl-5"> (+88) 01686-763706 <br> (+88) 01904-111196</p>
+        </div>
+        <div class="my-4">
+          <h4>Email</h4>
+          <p class="pl-5"> <a href="mailto:atikullahfaysal@gmail.com">atikullahfaysal@gmail.com</a> </p>
+        </div>
       </div>
-    </div>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3653.9503273097753!2d90.47961651526361!3d23.677734297464646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b72f14abadfb%3A0x657f78a454592ec6!2sJanani+Technology!5e0!3m2!1sen!2sbd!4v1535803740129"
-      width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-    <div class="contacts-point">
-      <h4>Our address</h4>
-      <p>Ali mia membar market, Bhuigor Bus-Stand, Bhuigor, Fatullah, Narayanganj-1421</p>
-    </div>
+      <div class="col-md-6">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3653.9503273097753!2d90.47961651526361!3d23.677734297464646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b72f14abadfb%3A0x657f78a454592ec6!2sJanani+Technology!5e0!3m2!1sen!2sbd!4v1535803740129"
+          width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+    </div>    
   </div>
 </div>
