--- a/src/home/containers/packages/packages.component.html
+++ b/src/home/containers/packages/packages.component.html
@@ -1,11 +1,14 @@
-<div class="packages">
+<page-head [name]="'Our Packages'" [page]="'packages'"></page-head>
+<!-- <div class="packages"> -->
   <div class="container">
-    <div class="row">
-      <div class="col-12 packages-title">
-        <h2>Packages </h2>
-        <span>Internet Packages For Home Users</span>
-      </div>
-    </div>
+
+    <p class="mt-5">The maximum Internet speed you select will be delivered to your Home Hub. That speed is then shared between all
+      your devices. By selecting a higher speed, you ensure more of your devices can surf at faster speeds. </p>
   </div>
   <plan></plan>
-</div>
+  <div class="container">
+    <p>Which Internet package is right for you?
+      With Janani Technology Limited light speed Internet, you can choose the best package as befits your family.</p>
+  </div>
+
+<!-- </div> -->
