--- a/src/home/components/ftp-servers/ftp-servers.component.scss
+++ b/src/home/components/ftp-servers/ftp-servers.component.scss
@@ -1,23 +1,31 @@
-.ftp {
-  min-height: calc(100vh - 150px);
-  padding: 20px 0;
-  &-title {
-    text-align: center;
-    color: #14a0f8;
-  }
-  &-point {
-    & h4 {
-      padding: 20px 0 10px 0;
-    }
-    font-size: 14px;
-    font-weight: 200;
-  }
+.card:hover {
+  cursor: pointer;
+  box-shadow: 0px 1px 4px 0px rgb(0 0 0 / 30%);
 }
-.server-link {
-  font-size: 40px;
-  border-left: 4px solid #14a0f8;
-
-  padding-left: 15px;
+a {
   text-decoration: none;
-  color: #ed2025;
+  color: black;
 }
+// .ftp {
+//   min-height: calc(100vh - 150px);
+//   padding: 20px 0;
+//   &-title {
+//     text-align: center;
+//     color: #14a0f8;
+//   }
+//   &-point {
+//     & h4 {
+//       padding: 20px 0 10px 0;
+//     }
+//     font-size: 14px;
+//     font-weight: 200;
+//   }
+// }
+// .server-link {
+//   font-size: 40px;
+//   border-left: 4px solid #14a0f8;
+
+//   padding-left: 15px;
+//   text-decoration: none;
+//   color: #ed2025;
+// }
