--- a/src/home/components/parallax/parallax.component.html
+++ b/src/home/components/parallax/parallax.component.html
@@ -1,30 +1,29 @@
 <div class="parallax">
   <div class="container">
     <div class="row">
-      <div class="row col-md-6">
+      <div class="col-md-6">
         <div class="intro">
           <div class="title">Fast Download &amp; Upload<br>Speeds at an Affordable Price</div>
           <div class="description">
             <p>When choosing among the best high speed Internet providers, there are<br>several other factors that
               should be taken into consideration besides just the available download speeds.</p>
-            <p>This is Photoshop's version of Lorem Ipsum. Proin gravida as nibh vel velit auctor aliquet. Aenean
-              sollicitudin, lorem quis a bibenum auctor, nisi elit consequat ipsum, nec sagittis sem is nibh id elit.
+            <p>Continue To Enjoy Janani Technology Internet, Surf, Stream, Games, TV And More With Blazing-Fast-Internet .
             </p>
           </div>
         </div>
         <div class="contact-info ">
           <div class="media">
             <div class="media-body">
-              <div class="phone"><span>(+88)</span> 01686-763706<br>
-                <span>(+88)</span> 01904-111196
+              <div class="phone"><span>(+88)</span> {{_companyInfo.phone[0]}}<br>
+                <span>(+88)</span> {{_companyInfo.phone[1]}}
               </div>
             </div>
           </div>
           <div class="media">
             <div class="media-body">
-              Ali Mia Membar Market<br>
-              Bhuighar Bus-Stand<br>
-              Bhuighar, Fatullah, Narayanganj-1421 <br> </div>
+              {{_companyInfo.address_line1}}<br>
+              {{_companyInfo.address_line2}}<br>
+              {{_companyInfo.address_line3}} <br> </div>
           </div>
         </div>
       </div>
