--- a/src/home/components/plan-box/plan-box.component.html
+++ b/src/home/components/plan-box/plan-box.component.html
@@ -9,7 +9,7 @@
                 </div>
             </div>
             <div class="wrapper-pricing">
-                <span class="price"><span class="price-symbol">৳</span>{{plan.price}}</span>
+                <span class="price">{{plan.speed}}</span>
             </div>
         </div>
         <div class="block-inner-content">
