--- a/src/home/components/banner/banner.component.html
+++ b/src/home/components/banner/banner.component.html
@@ -7,7 +7,7 @@
       <p>Looking for fast broadband without any line problem? Look no further! We even include Netphone with every plan,
         offering
         great rates and call value.</p>
-      <button class="btn button-2 btn-info rounded-pill" (click)="navigate('/order')">GET CONNECTION NOW
+      <button class="btn button-2 btn-info rounded-pill" (click)="navigate('/order')">Connect Now
         <i class="fa fa-chevron-right mx-2"></i></button>
     </div>
   </ng-template>
@@ -20,7 +20,7 @@
           plan, offering
           great rates and call value.</p>
       </div>
-      <button class="btn button-2 btn-primary rounded-pill" (click)="navigate('/order')">GET CONNECTION NOW
+      <button class="btn button-2 btn-primary rounded-pill" (click)="navigate('/order')">Connect Now
         <i class="fa fa-chevron-right mx-2"></i></button>
       <!-- <button class="btn button-2 raised" (click)="navigate('/order')">GET CONNECTION NOW
         <i class="fa fa-chevron-right mx-2"></i>
@@ -34,7 +34,7 @@
       <p>Looking for fast broadband without any line problem? Look no further! We even include Netphone with every plan,
         offering
         great rates and call value.</p>
-        <button class="btn button-2 btn-light rounded-pill" (click)="navigate('/order')">GET CONNECTION NOW
+        <button class="btn button-2 btn-light rounded-pill" (click)="navigate('/order')">Connect Now
           <i class="fa fa-chevron-right mx-2"></i></button>
     </div>
   </ng-template>
