--- a/src/home/components/banner/banner.component.scss
+++ b/src/home/components/banner/banner.component.scss
@@ -37,33 +37,6 @@
   transform-origin: 50% 50% 0px;
 }
 
-// .button {
-//   cursor: pointer;
-//   height: 50px;
-//   font-size: 19px !important;
-//   margin-top: 0px !important;
-//   padding: 5px!important;
-//   border-radius: 25px;
-//   font-family: "Raleway", sans-serif;
-//   font-weight: 800;
-//   line-height: 25px;
-//   outline: none;
-//   &-1 {
-//     color: #eee;
-//     background: #ed2427;
-//     & i {
-//       color: #2d86cf;
-//     }
-//   }
-//   &-2 {
-//     color: #eee;
-//     background: #2d86cf;
-//     & i {
-//       color: #ed2427;
-//     }
-//   }
-// }
-
 @media (max-width: 767px) {
   .carousel-image {
     height: 30vh;
@@ -86,5 +59,13 @@
     font-size: 10px !important;
     padding: 5px 5px !important;
     line-height: 18px;
+  }
+  .carousel-caption{
+    right: 40%;
+  }
+  .slide-head {
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 800;
   }
 }
