--- a/src/home/components/live-tvs/live-tvs.component.html
+++ b/src/home/components/live-tvs/live-tvs.component.html
@@ -1,25 +1,15 @@
-<div class="live-tvs">
-  <div class="container">
-    <div class="row">
-      <div class="col-12 live-tvs-title">
-        <h2>LIVE-TV-Servers </h2>
-      </div>
+<page-head [name]="'FTP Servers'" [page]="'ftp'"></page-head>
+<div class="container my-5">
+  <div class="row">
+    <div class="col-md-2 col-6 mt-4" *ngFor="let ftp of tvServers">
+      <a [href]="ftp.link" target="_blank">
+        <div class="card">
+          <img [src]="'assets/images/ftp/'+ftp.slug+'.jpg'" class="card-img-top" [alt]="ftp.slug">
+          <div class="card-footer p-2">
+            <div class="card-title text-center m-0"><strong> {{ftp.name}}</strong></div>
+          </div>
+        </div>
+      </a>
     </div>
-
-    <div class="row">
-
-      <div class="col-md-6 py-4">
-        <a class="server-link" href="http://www.ftpbd.net/online-tv/" target="_blank">ftpbd - Live</a>
-      </div>
-      <div class="col-md-6 py-4">
-        <a class="server-link" href="https://www.bioscopelive.com/en" target="_blank">bioscopelive</a>
-      </div>
-      <div class="col-md-6 py-4">
-        <a class="server-link" href="http://www.jagobd.com/" target="_blank">jagobd</a>
-      </div>
-
-    </div>
-
-
   </div>
 </div>
