--- a/src/home/components/navbar2/navbar2.component.html
+++ b/src/home/components/navbar2/navbar2.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" routerLink="/">
             <img class="logo-image" src="assets/images/logo_sm.png"> Janani
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#jananiNav"
@@ -13,7 +13,10 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/" (click)="toggleCollapse()">Home</a>
                 </li>
-                <li ngbDropdown placement="bottom-right" class="nav-item dropdown left-border">
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/packages" (click)="toggleCollapse()">Package</a>
+                </li>
+                <!-- <li ngbDropdown placement="bottom-right" class="nav-item dropdown left-border">
                     <a ngbDropdownToggle class="nav-link dropdown-toggle" id="packageDropdown" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">Package</a>
                     <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="packageDropdown">
@@ -22,7 +25,7 @@
                         <a class="dropdown-item" routerLink="/special-offer" (click)="toggleCollapse()">
                             Special Offer </a>
                     </div>
-                </li>
+                </li> -->
                 <li ngbDropdown placement="bottom-right" class="nav-item dropdown left-border">
                     <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">Media</a>
@@ -60,7 +63,8 @@
                 </li>
             </ul>
             <ul class="navbar-nav" style="font-size: 18px;">
-                <li><i class="fa fa-phone text-primary"></i> <span class="text-monospace"> 01686-763706</span> </li>
+                <li><i class="fa fa-phone text-primary"></i> <span class="text-monospace">
+                        {{_companyInfo.phone[0]}}</span> </li>
             </ul>
         </div>
     </div>
