--- a/src/home/components/plan-box/plan-box.component.css
+++ b/src/home/components/plan-box/plan-box.component.css
@@ -8,8 +8,10 @@
 }
 
 .plan-box-content {
+  border: 1px solid #bbb;
+  border-radius: 5px;
   background: #fff;
-  padding: 0 30px;
+  padding: 0 15px;
   -webkit-box-shadow: 0px 1px 4px 0px rgb(0 0 0 / 10%);
   box-shadow: 0px 1px 4px 0px rgb(0 0 0 / 10%);
   -webkit-transition: all 0.2s ease 0s;
