--- a/src/home/components/section-heding/section-heding.component.css
+++ b/src/home/components/section-heding/section-heding.component.css
@@ -3,6 +3,7 @@ h3 {
   font-weight: 700;
   font-family: "Raleway", sans-serif;
 }
+
 .section-title {
   margin: 0;
   color: #42a5f5;
@@ -30,4 +31,22 @@ h3 {
   display: inline-block;
   vertical-align: middle;
   margin-left: 30px;
+}
+
+@media (max-width: 767px) {
+  h3 {
+    font-size: 20px;
+    font-weight: 600;
+  }
+  .section-title:before {
+    content: none;
+  }
+  .section-title:after {
+    background: none;
+    position: absolute;
+    left: 50%;
+    margin-left: -125px;
+    width: 250px;
+    border-bottom: 1px dotted magenta;
+  }
 }
