--- a/src/home/containers/contacts/contacts.component.html
+++ b/src/home/containers/contacts/contacts.component.html
@@ -7,18 +7,18 @@
 
         <div class="my-4">
           <h4>Location</h4>
-          <p class="pl-5">Ali Mia Membar Market <br>
-            Bhuighar Bus-Stand, Bhuighar <br>
-            Fatullah, Narayanganj-1421</p>
+          <p class="pl-5">{{_companyInfo.address_line1}} <br>
+            {{_companyInfo.address_line2}}<br>
+            {{_companyInfo.address_line3}}</p>
         </div>
 
         <div class="my-4">
           <h4>Phone</h4>
-          <p class="pl-5"> (+88) 01686-763706 <br> (+88) 01904-111196</p>
+          <p class="pl-5"> <span *ngFor="let phone of _companyInfo.phone">(+88) {{phone}} <br></span> </p>
         </div>
         <div class="my-4">
           <h4>Email</h4>
-          <p class="pl-5"> <a href="mailto:atikullahfaysal@gmail.com">atikullahfaysal@gmail.com</a> </p>
+          <p class="pl-5">  <a [href]="'mailto:'+_companyInfo.email">{{_companyInfo.email}}</a> </p>
         </div>
       </div>
       <div class="col-md-6">
@@ -26,6 +26,6 @@
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3653.9503273097753!2d90.47961651526361!3d23.677734297464646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b72f14abadfb%3A0x657f78a454592ec6!2sJanani+Technology!5e0!3m2!1sen!2sbd!4v1535803740129"
           width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
-    </div>    
+    </div>
   </div>
 </div>
