--- a/src/home/containers/about/about.component.html
+++ b/src/home/containers/about/about.component.html
@@ -21,7 +21,7 @@
       </ul>
     </div>
     <div class="col-md-6">
-      <img class="img-fluid" src="assets/images/muslim_kids.png">
+      <img class="img-fluid" src="assets/images/muslim_kids.jpg">
     </div>
   </div>
   <div class="row my-5">
