small bug fixed

--- a/src/home/components/live-tvs/live-tvs.component.html
+++ b/src/home/components/live-tvs/live-tvs.component.html
@@ -1,4 +1,4 @@
-<page-head [name]="'FTP Servers'" [page]="'ftp'"></page-head>
+<page-head [name]="'TV Servers'" [page]="'tv'"></page-head>
 <div class="container my-5">
   <div class="row">
     <div class="col-md-2 col-6 mt-4" *ngFor="let ftp of tvServers">
