--- a/src/home/components/plan-box/plan-box.component.html
+++ b/src/home/components/plan-box/plan-box.component.html
@@ -3,13 +3,10 @@
         <div class="label" *ngIf="plan.best"><span>BEST SELLER</span></div>
         <div class="block-inner-header">
             <div class="wrapper-header">
-                <h3 class="name">{{plan.name}}</h3>
-                <div class="excerpt">
-                    <p>{{plan.plan}}</p>
-                </div>
+                <h3 class="name">{{plan.plan}}</h3>
             </div>
             <div class="wrapper-pricing">
-                <span class="price">{{plan.speed}}</span>
+                <span class="price">৳ {{plan.price}} </span>
             </div>
         </div>
         <div class="block-inner-content">
