new packages added

--- a/src/home/components/navbar2/navbar2.component.html
+++ b/src/home/components/navbar2/navbar2.component.html
@@ -21,6 +21,8 @@
                             Regular </a>
                         <a class="dropdown-item" routerLink="/special-offer" (click)="toggleCollapse()">
                             Special Offer </a>
+                        <a class="dropdown-item" routerLink="/ek-rate" (click)="toggleCollapse()">
+                            এক দেশ এক রেট</a>
                     </div>
                 </li>
                 <li ngbDropdown placement="bottom-right" class="nav-item dropdown left-border">
