--- a/src/home/containers/index/index.component.html
+++ b/src/home/containers/index/index.component.html
@@ -3,6 +3,7 @@
 <div class="mt-5 pt-5"></div>
 <section-heding [section]="'A RANGE OF'" [name]="'ADVANTAGES'"></section-heding>
 <advantages></advantages>
+<ek-rate-pak></ek-rate-pak>
 <plan></plan>
 <parallax></parallax>
 <services [head]='false'></services>
