packages notification updated

--- a/src/home/components/ek-rate-pak/ek-rate-pak.component.html
+++ b/src/home/components/ek-rate-pak/ek-rate-pak.component.html
@@ -1,6 +1,7 @@
 <div class="packages" [class.full-page] = singlePage >
   <div class="container">
     <div class="packages-title">
+      <h3 class="text-danger">* Packages are under construction <br/> More packages are coming</h3>
       <h2>এক দেশ এক রেট</h2>
       <span
         >According to BTRC direction, Janani Technology more extra bandwidth in
